Using the date object to find when christmas is

--- a/demo.html
+++ b/demo.html
@@ -7,62 +7,16 @@
 
 </head>
 <body>
-   
-<style>
-  td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-    tr:nth-child(even) {
-  background-color: #dddddd;
-
-}
-
-table{
-    position: relative;
-    left: 700px;
-    top: 250px;
-}
-
-
-
-</style>
-
-<table>
-
-<tr>
-    <th>JS data types</th>
-</tr>
-
-<tr>
-    <td>Number</td>
     
-</tr>
+    <style>
 
-<tr>
-    <td>String</td>
-
-</tr>
-
-<tr>
-    <td>Boolean</td>
-
-</tr>
-
-<tr>
-    <td>"Undefined"</td>
-
-</tr>
-
-<tr>
-    <td>Symbol</td>
-
-</tr>
-</table>
-<!--<input type="text">-->
-</body>
+        #christmas{color:red;position: relative; left:200px;top:200}
+        
+        </style>
+        <h1 id = "christmas">Hello</h1>
 
 <script src="JavascriptDemo.js"></script>
+</body>
 
 </html>
+
