Using date objects to wish you a merry christmas!

--- a/demo.html
+++ b/demo.html
@@ -10,10 +10,13 @@
     
     <style>
 
-        #christmas{color:red;position: relative; left:200px;top:200}
+        #christmas{
+        color:red;
+        }
         
         </style>
         <h1 id = "christmas">Hello</h1>
+        <h1 id = "birthday"> </h1>
 
 <script src="JavascriptDemo.js"></script>
 </body>
