Created a counter to see how far away christmas is

--- a/demo.html
+++ b/demo.html
@@ -11,12 +11,11 @@
     <style>
 
         #christmas{
-        color:red;
-        }
+        color:red;}
         
         </style>
         <h1 id = "christmas">Hello</h1>
-        <h1 id = "birthday"> </h1>
+        
 
 <script src="JavascriptDemo.js"></script>
 </body>
