--- a/demo.html
+++ b/demo.html
@@ -5,18 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js demo</title>
 
+    <link  href="styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+ 
+    <div id="color_changer"></div>
 
-
- <input type="text"; id = "text1"; placeholder="Enter your birthmonth">
- <br>
- <input type="text"; id = "text2"; placeholder="Enter your birthdate">
-<br>
-<br>
-<button id = "button"; onclick="fn()">Click me!</button>
-
-<script src="JavascriptDemo.js"></script>
+   <script src="JavascriptDemo.js"></script>
 </body>
 
 </html>
