--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,9 @@
 </head>
 <body>
  
-    <div id="color_changer"></div>
+    <div id="color_changer">
+        
+    </div>
 
    <script src="JavascriptDemo.js"></script>
 </body>
