--- a/demo.html
+++ b/demo.html
@@ -9,11 +9,11 @@
 </head>
 <body>
  
-    <div id="color_changer">
-        
-    </div>
+    <div id="color_changer"></div>
 
    <script src="JavascriptDemo.js"></script>
+
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
